# sdl_game

./: CMakeLists.txt  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Map.cpp  Map.h  TextureManager.cpp  TextureManager.h  main.cpp
cmake/: FindSDL2.cmake  FindSDL2_image.cmake
